--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300&family=Playfair+Display:ital@1&display=swap');
-
 .wrap {
     width: 100%;
     height: 100vh;
@@ -79,15 +77,14 @@
 .count_wrap h3 {
     text-align: center;
     font-size: 4.5rem;
-    font-family: 'Lato', sans-serif;
-    font-weight: 100;
+    font-family: 'Lato-Hairline';
     margin: 0 auto;
     line-height: 0.5;
 }
 
 .count {
     position: relative;
-    font-family: 'Playfair Display', serif;
+    font-family: 'PlayfairDisplay-Italic';
     margin: 0 auto;
     text-align: center;
 }
