--- a/css/common.css
+++ b/css/common.css
@@ -77,3 +77,9 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
+
+#wrap {
+    max-width: 720px;
+    width: 100%;
+    margin: 0 auto;
+}
