--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,8 @@
-#wrap {
-    max-width: 720px;
-    width: 100%;
-    margin: 0 auto;
-}
-
 .header {
     position: fixed;
     top: 0;
-    left: 0;
+    max-width: 720px;
+    width: 100%;
     z-index: 500;
     width: 100%;
     height: 55px;
@@ -70,6 +65,7 @@
     top: -50px;
     padding: 20px;
     width: calc(100% - 40px);
+    z-index: 1;
 }
 
 .item {
