--- a/css/style.css
+++ b/css/style.css
@@ -132,22 +132,25 @@
 
 .link {
     z-index: 1111;
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform:translateX(-50%);
+    position: relative;
+    /* bottom: 20px; */
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
     cursor: pointer;
+    text-align: center;
+    display: block;
+    margin-top: 40px;
 }
 
-.size3:first-child{
+/* .size3:first-child{
     margin-right: 20px;
-}
+} */
 
 .size3 {
     position: relative;
     display: inline-block;
-    width: 36px;
-    height: 36px;
+    width: 50px;
+    height: 50px;
     text-align: center;
     border: 1px solid #fff;
     background-color: transparent;
