--- a/css/theater.css
+++ b/css/theater.css
@@ -158,6 +158,12 @@
     line-height: 56px;
 }
 
+.bottom_btn button {
+    background: none;
+    width: 100%;
+    display:block;
+}
+
 .seoul {
     display: none;
     width: 100%;
