--- a/css/seoul.css
+++ b/css/seoul.css
@@ -226,6 +226,8 @@
 
 .menu_img {
     margin-top: 20px;
-    text-align: center;
-    border: 1px solid #e9e9e9;
+}
+
+.menu_img img {
+    width: 100%;
 }
