--- a/css/common.css
+++ b/css/common.css
@@ -16,7 +16,7 @@ body {
     font-weight: 400;
 	font-family: 'Noto Sans KR', sans-serif;
 }
-h1, h2, h3, h4, h5, h6, ul, li, span, p {
+h1, h2, h3, h4, h5, h6, ul, li, span, p, button{
 	font-weight: normal;
 	margin: 0;
 	padding: 0;
