--- a/css/cafe.css
+++ b/css/cafe.css
@@ -146,6 +146,7 @@
     padding: 0 20px;
     border-bottom: 1px solid #e7e7e7;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .cafe_nav_scroll {
@@ -189,6 +190,7 @@
 
 .cafe_info {
     display: none;
+    cursor: pointer;
 }
 
 .info {
