--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 .wrap {
     width: 100%;
+    height: auto;
     padding: 0;
     overflow: hidden;
 }
@@ -65,6 +66,7 @@
 
 .count_wrap {
     width: 100%;
+    height: auto;
     position:absolute;
     top: 50%;
     left: 50%;    
