--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .wrap {
     width: 100%;
-    height: auto;
+    height: 100vh;
     padding: 0;
     overflow: hidden;
 }
@@ -66,7 +66,6 @@
 
 .count_wrap {
     width: 100%;
-    height: auto;
     position:absolute;
     top: 50%;
     left: 50%;    
